--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "homepage": "",
   "dependencies": {
-    "gh-pages": "^1.1.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.7",
-    "react-scripts": "1.0.17",
+    "gh-pages": "^1.2.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^5.1.2",
+    "react-scripts": "^3.4.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
-    "tachyons": "^4.9.0"
+    "redux-thunk": "^2.3.0",
+    "tachyons": "^4.11.1"
   },
   "scripts": {
     "predeploy": "npm run build",
